deploy/k8s/overlays/develop/statistics-worker-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-statistics-worker
spec:
  template:
    spec:
      containers:
        - name: worker
