deploy/k8s/overlays/develop/worker-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-place-sync-worker
spec:
  template:
    spec:
      containers:
        - name: worker
